# hello_django

./: db.sqlite3  pyproject.toml
helloworld/: settings.py  urls.py
